update build.gradle, SwaggerTest: convertDocs task 추가