@@ -29,45 +29,39 @@ import org.springframework.test.web.servlet.MvcResult;
 @SpringBootTest(classes = {NotifyApplication.class})
 @AutoConfigureMockMvc
 class SwaggerTest {
-  @Autowired
-  private MockMvc mockMvc;
-  @Test
-  public void createSpringfoxSwaggerJson() throws Exception {
-    String outputDir = System.getProperty("io.springfox.staticdocs.outputDir");
-    MvcResult mvcResult = this.mockMvc.perform(get("/v2/api-docs")
-            .accept(MediaType.APPLICATION_JSON).characterEncoding("UTF-8"))
-        .andExpect(status().isOk())
-        .andReturn();
+    @Autowired
+    private MockMvc mockMvc;
 
-    MockHttpServletResponse response = mvcResult.getResponse();
-//    String swaggerJson = new String(response.getContentAsString().getBytes("ISO_8859_1"), StandardCharsets.UTF_8);
-    Files.createDirectories(Paths.get(outputDir));
-    try (BufferedWriter writer = Files.newBufferedWriter(Paths.get(outputDir, "swagger.json"), StandardCharsets.UTF_8)){
-      writer.write(response.getContentAsString());
+    @Test
+    public void createSpringfoxSwaggerJson() throws Exception {
+        String outputDir = System.getProperty("io.springfox.staticdocs.outputDir");
+        MvcResult mvcResult = this.mockMvc.perform(get("/v2/api-docs")
+                        .accept(MediaType.APPLICATION_JSON).characterEncoding("UTF-8"))
+                .andExpect(status().isOk())
+                .andReturn();
+
+        MockHttpServletResponse response = mvcResult.getResponse();
+    //    String swaggerJson = new String(response.getContentAsString().getBytes("ISO_8859_1"), StandardCharsets.UTF_8);
+        Files.createDirectories(Paths.get(outputDir));
+        try (BufferedWriter writer = Files.newBufferedWriter(Paths.get(outputDir, "swagger.json"), StandardCharsets.UTF_8)) {
+            writer.write(response.getContentAsString());
+        }
     }
-  }
 
-  @Test
-  public void convertSwaggerToAsciiDoc() throws Exception {
-    String outputDir = System.getProperty("io.springfox.staticdocs.outputDir");
-    Swagger2MarkupConfig config = new Swagger2MarkupConfigBuilder()
-        .withMarkupLanguage(MarkupLanguage.ASCIIDOC)
-        .withOutputLanguage(Language.EN)
-        .withPathsGroupedBy(GroupBy.TAGS)
-        .withGeneratedExamples()
-        .withoutInlineSchema()
-        .build();
-
-    // 개행 처리 위해 중간에 캐치
-    Swagger2MarkupConverter swagger2MarkupConverter = Swagger2MarkupConverter.from(Path.of(outputDir, "/swagger.json").toUri())
-        .withConfig(config)
-        .build();
-
-    // <br> 태그를 adoc에 맞는 줄바꿈 형태로 교환
-    String result = swagger2MarkupConverter.toString().replaceAll("<br>", " + \n");
-    // 파일로 저장
-    try (BufferedWriter writer = Files.newBufferedWriter(Paths.get(outputDir, "swagger.adoc"), StandardCharsets.UTF_8)){
-      writer.write(result);
+    @Test
+    public void convertSwaggerToAsciiDoc(){
+        String outputDir = System.getProperty("io.springfox.staticdocs.outputDir");
+        Swagger2MarkupConfig config = new Swagger2MarkupConfigBuilder()
+                .withMarkupLanguage(MarkupLanguage.ASCIIDOC)
+                .withOutputLanguage(Language.EN)
+                .withPathsGroupedBy(GroupBy.TAGS)
+                .withGeneratedExamples()
+                .withoutInlineSchema()
+                .build();
+        Swagger2MarkupConverter.from(Path.of(outputDir,"/swagger.json").toUri())
+                .withConfig(config)
+                .build()
+//            .toFolder(Paths.get(outputDir))
+                .toFile(Path.of(outputDir, "/swagger"));
     }
-  }
 }
